3.msa-container/manifest/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: msa
    role: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: msa-web
  template:
    metadata:
      labels:
        app: msa-web
    spec:
      containers:
      - image: 264594923212.dkr.ecr.ap-northeast-2.amazonaws.com/web:1575216757
        name: web
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: "10m"
            memory: "10Mi"
          limits:
            cpu: "20m"
            memory: "20Mi"
      nodeSelector:
        eks.amazonaws.com/nodegroup: service

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: msa
    role: apis
spec:
  replicas: 2
  selector:
    matchLabels:
      app: msa-api
  template:
    metadata:
      labels:
        app: msa-api
    spec:
      containers:
      - image: 264594923212.dkr.ecr.ap-northeast-2.amazonaws.com/api:1575219500
        name: api
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: "10m"
            memory: "10Mi"
          limits:
            cpu: "20m"
            memory: "20Mi"
      nodeSelector:
        eks.amazonaws.com/nodegroup: service
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts
  labels:
    app: msa
    role: posts
spec:
  replicas: 2
  selector:
    matchLabels:
      app: msa-post
  template:
    metadata:
      labels:
        app: msa-post
    spec:
      containers:
      - image: 264594923212.dkr.ecr.ap-northeast-2.amazonaws.com/post:1575219506
        name: posts
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: "10m"
            memory: "10Mi"
          limits:
            cpu: "20m"
            memory: "20Mi"
      nodeSelector:
        eks.amazonaws.com/nodegroup: service

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: threads
  labels:
    app: msa
    role: threads
spec:
  replicas: 3
  selector:
    matchLabels:
      app: msa-thread
  template:
    metadata:
      labels:
        app: msa-thread
    spec:
      containers:
      - image: 264594923212.dkr.ecr.ap-northeast-2.amazonaws.com/thread:1575219512
        name: threads
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: "10m"
            memory: "10Mi"
          limits:
            cpu: "20m"
            memory: "20Mi"
      nodeSelector:
        eks.amazonaws.com/nodegroup: service

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  labels:
    app: msa
    role: users
spec:
  replicas: 2
  selector:
    matchLabels:
      app: msa-user
  template:
    metadata:
      labels:
        app: msa-user
    spec:
      containers:
      - image: 264594923212.dkr.ecr.ap-northeast-2.amazonaws.com/users:1575215205
        name: users
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: "10m"
            memory: "10Mi"
          limits:
            cpu: "20m"
            memory: "20Mi"
      nodeSelector:
        eks.amazonaws.com/nodegroup: service
