3.msa-container/manifest/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: usersport
spec:
  ports:
  - port: 8080
    targetPort: 3000
    protocol: TCP
  type: NodePort
  selector:
    app: msa-user

---
apiVersion: v1
kind: Service
metadata:
  name: postsport
spec:
  ports:
  - port: 8080
    targetPort: 3000
    protocol: TCP
  type: NodePort
  selector:
    app: msa-post

---
apiVersion: v1
kind: Service
metadata:
  name: threadsport
spec:
  ports:
  - port: 8080
    targetPort: 3000
    protocol: TCP
  type: NodePort
  selector:
    app: msa-thread

---
apiVersion: v1
kind: Service
metadata:
  name: websport
spec:
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  type: NodePort
  selector:
    app: msa-web

---
apiVersion: v1
kind: Service
metadata:
  name: apisport
spec:
  ports:
  - port: 8080
    targetPort: 3000
    protocol: TCP
  type: NodePort
  selector:
    app: msa-api
